WEBSITE-2852 - UI issue logging-in mobile entrypage on ios device.

--- a/assets/sass/base/_default.scss
+++ b/assets/sass/base/_default.scss
@@ -39,6 +39,12 @@ body {
     }
 }
 
+@supports (padding-top: constant(safe-area-inset-top)) {
+  body {
+    padding: env(safe-area-inset-top) env(safe-area-inset-right) env(safe-area-inset-bottom) env(safe-area-inset-left);
+  }
+}
+
 // Links
 a {
     transition: color 0.3s, background-color 0.3s;
